force-app/main/default/objects/SiebelCustomer__x/SiebelCustomer__x.object-meta.xml
<CustomObject>
    <description>SiebelCustomer</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelCustomer</externalName>
    <label>Cliente Siebel</label>
    <pluralLabel>Clienti Siebel</pluralLabel>
</CustomObject>