force-app/main/default/objects/SiebelCustomer__x/fields/ALIAS_NAME__c.field-meta.xml
<CustomField>
    <fullName>ALIAS_NAME__c</fullName>
    <description>ALIAS_NAME</description>
    <externalDeveloperName>ALIAS_NAME</externalDeveloperName>
    <label>Cognome/Rag. Sociale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>