force-app/main/default/objects/SiebelCustomer__x/fields/ATTRIB_34__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_34__c</fullName>
    <description>ATTRIB_34</description>
    <externalDeveloperName>ATTRIB_34</externalDeveloperName>
    <label>Autocertificazione Mtutela</label>
    <length>30</length>
    <type>Text</type>
</CustomField>