force-app/main/default/objects/SiebelCustomer__x/fields/CREATED__c.field-meta.xml
<CustomField>
    <fullName>CREATED__c</fullName>
    <description>CREATED</description>
    <externalDeveloperName>CREATED</externalDeveloperName>
    <label>Data creazione record in Siebel</label>
    <type>DateTime</type>
</CustomField>