force-app/main/default/objects/SiebelCustomer__x/fields/DESC_TEXT__c.field-meta.xml
<CustomField>
    <fullName>DESC_TEXT__c</fullName>
    <description>DESC_TEXT</description>
    <externalDeveloperName>DESC_TEXT</externalDeveloperName>
    <label>Note del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>