force-app/main/default/objects/SiebelCustomer__x/fields/LOGIN__c.field-meta.xml
<CustomField>
    <fullName>LOGIN__c</fullName>
    <description>LOGIN</description>
    <externalDeveloperName>LOGIN</externalDeveloperName>
    <label>Commerciale di riferimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>