force-app/main/default/objects/SiebelCustomer__x/fields/MAIN_EMAIL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>MAIN_EMAIL_ADDR__c</fullName>
    <description>MAIN_EMAIL_ADDR</description>
    <externalDeveloperName>MAIN_EMAIL_ADDR</externalDeveloperName>
    <label>E-mail</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>