force-app/main/default/objects/SiebelCustomer__x/fields/MAIN_FAX_PH_NUM__c.field-meta.xml
<CustomField>
    <fullName>MAIN_FAX_PH_NUM__c</fullName>
    <description>MAIN_FAX_PH_NUM</description>
    <externalDeveloperName>MAIN_FAX_PH_NUM</externalDeveloperName>
    <label>FAX</label>
    <length>40</length>
    <type>Text</type>
</CustomField>