force-app/main/default/objects/SiebelCustomer__x/fields/NAME_1__c.field-meta.xml
<CustomField>
    <fullName>NAME_1__c</fullName>
    <description>NAME_1</description>
    <externalDeveloperName>NAME_1</externalDeveloperName>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>