force-app/main/default/objects/SiebelCustomer__x/fields/OU_NUM__c.field-meta.xml
<CustomField>
    <fullName>OU_NUM__c</fullName>
    <description>OU_NUM</description>
    <externalDeveloperName>OU_NUM</externalDeveloperName>
    <label>Codice cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>