force-app/main/default/objects/SiebelCustomer__x/fields/PAR_OU_ID__c.field-meta.xml
<CustomField>
    <fullName>PAR_OU_ID__c</fullName>
    <description>PAR_OU_ID</description>
    <externalDeveloperName>PAR_OU_ID</externalDeveloperName>
    <label>Principale</label>
    <length>15</length>
    <type>Text</type>
</CustomField>