force-app/main/default/objects/SiebelCustomer__x/fields/TAX_IDEN_NUM__c.field-meta.xml
<CustomField>
    <fullName>TAX_IDEN_NUM__c</fullName>
    <description>TAX_IDEN_NUM</description>
    <externalDeveloperName>TAX_IDEN_NUM</externalDeveloperName>
    <label>Codice Fiscale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>