force-app/main/default/objects/SiebelCustomer__x/fields/VAT_REGN_NUM__c.field-meta.xml
<CustomField>
    <fullName>VAT_REGN_NUM__c</fullName>
    <description>VAT_REGN_NUM</description>
    <externalDeveloperName>VAT_REGN_NUM</externalDeveloperName>
    <label>Partita IVA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>