force-app/main/default/objects/SiebelCustomer__x/fields/X_BONUS_SOCIALE_FLG__c.field-meta.xml
<CustomField>
    <fullName>X_BONUS_SOCIALE_FLG__c</fullName>
    <description>X_BONUS_SOCIALE_FLG</description>
    <externalDeveloperName>X_BONUS_SOCIALE_FLG</externalDeveloperName>
    <label>Bonus Sociale</label>
    <length>1</length>
    <type>Text</type>
</CustomField>