force-app/main/default/objects/SiebelCustomer__x/fields/X_COGNOME_SLOVENO__c.field-meta.xml
<CustomField>
    <fullName>X_COGNOME_SLOVENO__c</fullName>
    <description>X_COGNOME_SLOVENO</description>
    <externalDeveloperName>X_COGNOME_SLOVENO</externalDeveloperName>
    <label>Cognome/Rag. Soc. sloveno</label>
    <length>100</length>
    <type>Text</type>
</CustomField>