force-app/main/default/objects/SiebelCustomer__x/fields/X_COMUNE__c.field-meta.xml
<CustomField>
    <fullName>X_COMUNE__c</fullName>
    <description>X_COMUNE</description>
    <externalDeveloperName>X_COMUNE</externalDeveloperName>
    <label>Comune</label>
    <length>50</length>
    <type>Text</type>
</CustomField>