force-app/main/default/objects/SiebelCustomer__x/fields/X_CONS_PROFILAZIONE_NO__c.field-meta.xml
<CustomField>
    <fullName>X_CONS_PROFILAZIONE_NO__c</fullName>
    <description>X_CONS_PROFILAZIONE_NO</description>
    <externalDeveloperName>X_CONS_PROFILAZIONE_NO</externalDeveloperName>
    <label>Consenso Profilazione No</label>
    <length>1</length>
    <type>Text</type>
</CustomField>