force-app/main/default/objects/SiebelCustomer__x/fields/X_CONSENSO_FIRMA_FLG__c.field-meta.xml
<CustomField>
    <fullName>X_CONSENSO_FIRMA_FLG__c</fullName>
    <description>X_CONSENSO_FIRMA_FLG</description>
    <externalDeveloperName>X_CONSENSO_FIRMA_FLG</externalDeveloperName>
    <label>Consenso firma</label>
    <length>1</length>
    <type>Text</type>
</CustomField>