force-app/main/default/objects/SiebelCustomer__x/fields/X_DATAFINE_PIVA_GRUPPO__c.field-meta.xml
<CustomField>
    <fullName>X_DATAFINE_PIVA_GRUPPO__c</fullName>
    <description>X_DATAFINE_PIVA_GRUPPO</description>
    <externalDeveloperName>X_DATAFINE_PIVA_GRUPPO</externalDeveloperName>
    <label>Data Fine Piva di Gruppo</label>
    <type>Date</type>
</CustomField>