force-app/main/default/objects/SiebelCustomer__x/fields/X_DATAINIZIO_PIVA_GRUPPO__c.field-meta.xml
<CustomField>
    <fullName>X_DATAINIZIO_PIVA_GRUPPO__c</fullName>
    <description>X_DATAINIZIO_PIVA_GRUPPO</description>
    <externalDeveloperName>X_DATAINIZIO_PIVA_GRUPPO</externalDeveloperName>
    <label>Data Inizio Piva di Gruppo</label>
    <type>Date</type>
</CustomField>