force-app/main/default/objects/SiebelCustomer__x/fields/X_FLG_PIVA_GRUPPO__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_PIVA_GRUPPO__c</fullName>
    <description>X_FLG_PIVA_GRUPPO</description>
    <externalDeveloperName>X_FLG_PIVA_GRUPPO</externalDeveloperName>
    <label>Flag Adesione Gruppo IVA</label>
    <length>1</length>
    <type>Text</type>
</CustomField>