force-app/main/default/objects/SiebelCustomer__x/fields/X_LIMITAZIONE_DATI__c.field-meta.xml
<CustomField>
    <fullName>X_LIMITAZIONE_DATI__c</fullName>
    <description>X_LIMITAZIONE_DATI</description>
    <externalDeveloperName>X_LIMITAZIONE_DATI</externalDeveloperName>
    <label>Limitazione dati</label>
    <length>1</length>
    <type>Text</type>
</CustomField>