force-app/main/default/objects/SiebelCustomer__x/fields/X_LOCALITA__c.field-meta.xml
<CustomField>
    <fullName>X_LOCALITA__c</fullName>
    <description>X_LOCALITA</description>
    <externalDeveloperName>X_LOCALITA</externalDeveloperName>
    <label>Località</label>
    <length>50</length>
    <type>Text</type>
</CustomField>