force-app/main/default/objects/SiebelCustomer__x/fields/X_MAIN_PH_NUM_2__c.field-meta.xml
<CustomField>
    <fullName>X_MAIN_PH_NUM_2__c</fullName>
    <description>X_MAIN_PH_NUM_2</description>
    <externalDeveloperName>X_MAIN_PH_NUM_2</externalDeveloperName>
    <label>Telefono Fisso2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>