force-app/main/default/objects/SiebelCustomer__x/fields/X_MARCATURA_CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>X_MARCATURA_CLIENTE__c</fullName>
    <description>X_MARCATURA_CLIENTE</description>
    <externalDeveloperName>X_MARCATURA_CLIENTE</externalDeveloperName>
    <label>Marcatura cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>