force-app/main/default/objects/SiebelCustomer__x/fields/X_NOME_SLOVENO__c.field-meta.xml
<CustomField>
    <fullName>X_NOME_SLOVENO__c</fullName>
    <description>X_NOME_SLOVENO</description>
    <externalDeveloperName>X_NOME_SLOVENO</externalDeveloperName>
    <label>Nome sloveno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>