force-app/main/default/objects/SiebelCustomer__x/fields/X_NUM_CIVICO__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_CIVICO__c</fullName>
    <description>X_NUM_CIVICO</description>
    <externalDeveloperName>X_NUM_CIVICO</externalDeveloperName>
    <label>Civico</label>
    <length>30</length>
    <type>Text</type>
</CustomField>