force-app/main/default/objects/SiebelCustomer__x/fields/X_PIVA_GRUPPO__c.field-meta.xml
<CustomField>
    <fullName>X_PIVA_GRUPPO__c</fullName>
    <description>X_PIVA_GRUPPO</description>
    <externalDeveloperName>X_PIVA_GRUPPO</externalDeveloperName>
    <label>Partita IVA di Gruppo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>