force-app/main/default/objects/SiebelCustomer__x/fields/X_PRIVACY_TUTTO_NO__c.field-meta.xml
<CustomField>
    <fullName>X_PRIVACY_TUTTO_NO__c</fullName>
    <description>X_PRIVACY_TUTTO_NO</description>
    <externalDeveloperName>X_PRIVACY_TUTTO_NO</externalDeveloperName>
    <label>Flag Consenso Privacy Comm. Tutti No</label>
    <length>1</length>
    <type>Text</type>
</CustomField>