force-app/main/default/objects/SiebelCustomer__x/fields/X_PROV__c.field-meta.xml
<CustomField>
    <fullName>X_PROV__c</fullName>
    <description>X_PROV</description>
    <externalDeveloperName>X_PROV</externalDeveloperName>
    <label>Provincia</label>
    <length>2</length>
    <type>Text</type>
</CustomField>