force-app/main/default/objects/SiebelCustomer__x/fields/X_REFERENTE_2__c.field-meta.xml
<CustomField>
    <fullName>X_REFERENTE_2__c</fullName>
    <description>X_REFERENTE_2</description>
    <externalDeveloperName>X_REFERENTE_2</externalDeveloperName>
    <label>Referente2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>