force-app/main/default/objects/SiebelCustomer__x/fields/X_SUFF_CIVICO__c.field-meta.xml
<CustomField>
    <fullName>X_SUFF_CIVICO__c</fullName>
    <description>X_SUFF_CIVICO</description>
    <externalDeveloperName>X_SUFF_CIVICO</externalDeveloperName>
    <label>Suffisso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>