force-app/main/default/objects/SiebelCustomer__x/fields/X_VIRTUAL_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>X_VIRTUAL_ACCOUNT__c</fullName>
    <description>X_VIRTUAL_ACCOUNT</description>
    <externalDeveloperName>X_VIRTUAL_ACCOUNT</externalDeveloperName>
    <label>IBAN Virtuale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>