force-app/main/default/objects/SiebelCustomer__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>ALIAS_NAME__c</columns>
    <columns>NAME_1__c</columns>
    <columns>OU_NUM__c</columns>
    <columns>ROW_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>